--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,18 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+    //ui
+    implementation "androidx.navigation:navigation-fragment-ktx:2.2.1"
+    implementation "androidx.navigation:navigation-ui-ktx:2.2.1"
+    implementation 'com.airbnb.android:lottie:3.0.7'
+    implementation 'com.github.hajiyevelnur92:intentanimation:1.0'
+    implementation 'com.google.android.material:material:1.0.0-beta01'
+    implementation 'androidx.viewpager:viewpager:1.0.0'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
+    implementation 'com.asksira.android:loopingviewpager:1.3.1'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
     // Required -- JUnit 4 framework
     testImplementation 'junit:junit:4.12'
     // Optional -- Robolectric environment
@@ -67,6 +79,7 @@ dependencies {
     //navigation
     implementation "androidx.navigation:navigation-fragment-ktx:2.2.2"
     implementation "androidx.navigation:navigation-ui-ktx:2.2.2"
+
 
 
 }
