--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ android {
         viewBinding = true
     }
     defaultConfig {
-        applicationId "com.frezzcoding.muzmatch_oskarlasota"
+        applicationId "com.frezzcoding.songplayer"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
